--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -66,25 +66,24 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
                            levels = rev(c("Nutrient inputs", "Nutrient transport", 
                                       "Land-use cover", "Buffer composition", 
                                       "Lake")))) %>%
+  mutate(category = forcats::fct_recode(category, 
+                                        Buffer = "Buffer composition")) %>%
   arrange(category) %>%
   ungroup() %>% mutate(pretty = factor(pretty, levels = pretty)) %>%
   arrange(category, pretty)
 
-text_colors <- rev(ifelse(gg_tp$signif == 0, "black", "red"))
-# cbind(text_colors, as.character(gg_tp$pretty))
-
 gg_tp_fe <- ggplot(data = gg_tp) + 
   geom_pointrange(aes(x = pretty, y = `50%`, 
                       ymin = `5%`, ymax = `95%`, color = signif)) + 
-  expand_limits(y = -1.2) +
-  geom_rect(ymin = -0.6, ymax = -1.5, xmin = 0, xmax = nrow(gg_tp) + 1, 
-              fill = "white") +
+  expand_limits(y = -1.8) +
+  geom_rect(ymin = -0.6, ymax = -0.6 - 2, xmin = 0, xmax = nrow(gg_tp) + 1, 
+              fill = "transparent") +
   geom_text(aes(x = pretty, label = pretty, color = signif), 
-            y = -0.65, vjust = 1.1, hjust = "right") + 
+            y = -0.65, vjust = 0.5, hjust = "right") + 
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
     geom_hline(yintercept = 0) +
   scale_y_continuous(breaks = seq(from = -0.6, to  = 0.4, by = 0.2), 
-                     labels = scales::format_format(scientific = FALSE)) +
+                     labels = scales::number_format(accuracy = 0.1)) +
   coord_flip() +
   theme(axis.text.y = element_blank(), 
         axis.ticks.y = element_blank(), 
@@ -95,8 +94,14 @@ gg_tp_fe <- ggplot(data = gg_tp) +
           strip.placement = "outside", 
           strip.background = element_blank(), 
           axis.title.y = element_blank()) + 
-        ylab("Standardized FE slope") + theme(legend.position = 0) + 
-        ggtitle("TP ~ Slope") + xlab("")
+        ylab("Standardized slope") + theme(legend.position = 0) + 
+        ggtitle("TP") + xlab("") +
+  theme(panel.background = element_rect(fill = "transparent", color = NA),
+        plot.background = element_rect(fill = "transparent", color = NA), 
+        panel.grid = element_blank(),
+        rect = element_rect(fill = "transparent")) + 
+    annotate(x=0, xend=0, y=-0.6, yend=0.4, 
+             colour="black", lwd=0.9, geom="segment")
 
 gp <- ggplotGrob(gg_tp_fe)
 facet.columns <- gp$layout$t[grepl("panel", gp$layout$name)]
@@ -143,31 +148,69 @@ gg_tn <- spread_draws(fit_tn, `b_.*`, regex = TRUE) %>%
   left_join(pred_key, by = c("key" = "varv")) %>%
   group_by(pretty) %>%
   summarize(value = list(tibble::enframe(
-    quantile(value, probs=c(0.05,0.5,0.95))))) %>% 
-  unnest() %>%
+    quantile(value, probs=c(0.05,0.5,0.95))))) %>% unnest() %>%
   tidyr::spread(name, value) %>%
   rowwise() %>%
-  mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0))
+  mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
+  left_join(dplyr::select(pred_key, pretty, category)) %>%
+  mutate(category = factor(category, 
+                           levels = rev(c("Nutrient inputs", "Nutrient transport", 
+                                      "Land-use cover", "Buffer composition", 
+                                      "Lake")))) %>%
+  mutate(category = forcats::fct_recode(category, 
+                                        Buffer = "Buffer composition")) %>%
+  arrange(category) %>%
+  ungroup() %>% mutate(pretty = factor(pretty, levels = pretty)) %>%
+  arrange(category, pretty)
 
-gg_tn_fe <- ggplot(data = gg_tn) + 
+gg_tn_fe <- 
+  ggplot(data = gg_tn) + 
   geom_pointrange(aes(x = pretty, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`, color = signif)) +
+                      ymin = `5%`, ymax = `95%`, color = signif)) + 
+  expand_limits(y = c(-0.6, 1.6)) +
+  geom_rect(ymin = 0.44, ymax = 0.44 + 2, xmin = 0, xmax = nrow(gg_tn) + 1, 
+              fill = "transparent") +
+  geom_text(aes(x = pretty, label = pretty, color = signif), 
+            y = 0.44, vjust = 0.5, hjust = "left") + 
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  geom_hline(yintercept = 0) +
+    geom_hline(yintercept = 0) +
+  scale_y_continuous(breaks = seq(from = -0.6, to  = 0.4, by = 0.2), 
+                     labels = scales::number_format(accuracy = 0.1)) +
   coord_flip() +
-  theme_cowplot() +
-  ylim(-0.6, 0.4) +
-  ylab("Standardized FE slope") + theme(legend.position = 0) + ggtitle("TN ~ Slope") +
-  xlab("") 
+  theme(axis.text.y = element_blank(), 
+        axis.ticks.y = element_blank(), 
+        axis.title.y = element_blank()) + 
+    facet_wrap(~category, strip.position = "right", ncol = 1, scales = "free_y",
+               as.table = FALSE) +
+    theme(panel.spacing = unit(0, "lines"), 
+          strip.placement = "outside", 
+          strip.background = element_blank(), 
+          axis.title.y = element_blank()) + 
+        ylab("Standardized slope") + theme(legend.position = 0) + 
+        ggtitle("TN") + xlab("") +
+  theme(panel.background = element_rect(fill = "transparent"), 
+        panel.grid = element_blank(),
+        rect = element_rect(fill = "transparent")) + 
+    annotate(x=0, xend=0, y=-0.6, yend=0.4, 
+             colour="black", lwd=0.9, geom="segment")
+
+gp <- ggplotGrob(gg_tn_fe)
+facet.columns <- gp$layout$t[grepl("panel", gp$layout$name)]
+x.var         <- sapply(ggplot_build(gg_tn_fe)$layout$panel_scales_x,
+                function(l) length(l$range$range))
+gp$heights[facet.columns] <- gp$heights[facet.columns] * rev(x.var)
+gg_tn_fe <- ggplotify::as.ggplot(gp)
+gg_tn_fe
 ```
 
-```{r tn_re_hu4}
+```{r tn_re_hu4, fig.width = 3.77, fig.height = 4.5}
 
 # map significant random effects hu4s
 gg_hu4 <- ggplot() +
     geom_sf(data = hu4) +
     geom_sf(data = signif_hu4, color = "red", alpha = 0) +
     # geom_text(data = coords, aes(x = x, y = y, label = ZoneID)) +   
+    coord_sf(datum = NA) +
     theme_minimal() + 
     theme(legend.position = "bottom", 
           axis.title = element_blank(), 
@@ -281,7 +324,7 @@ gg_line
 cowplot::plot_grid(gg_tp_fe + theme(axis.title.x = element_blank()), 
                    gg_tn_fe + theme(axis.text.y = element_blank(), 
                                     axis.title.x = element_blank()), 
-                   rel_widths = c(1, 0.6))
+                   rel_widths = c(1, 1))
 ```
 
 ```{r re}
