--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -72,7 +72,8 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
   ungroup() %>% mutate(pretty = factor(pretty, levels = pretty)) %>%
   arrange(category, pretty)
 
-gg_tp_fe <- ggplot(data = gg_tp) + 
+gg_tp_fe <- 
+  ggplot(data = gg_tp) + 
   geom_pointrange(aes(x = pretty, y = `50%`, 
                       ymin = `5%`, ymax = `95%`, color = signif)) + 
   expand_limits(y = -1.8) +
@@ -81,7 +82,7 @@ gg_tp_fe <- ggplot(data = gg_tp) +
   geom_text(aes(x = pretty, label = pretty, color = signif), 
             y = -0.65, vjust = 0.5, hjust = "right") + 
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-    geom_hline(yintercept = 0) +
+  geom_hline(yintercept = 0) +
   scale_y_continuous(breaks = seq(from = -0.6, to  = 0.4, by = 0.2), 
                      labels = scales::number_format(accuracy = 0.1)) +
   coord_flip() +
@@ -101,15 +102,7 @@ gg_tp_fe <- ggplot(data = gg_tp) +
         panel.grid = element_blank(),
         rect = element_rect(fill = "transparent")) + 
     annotate(x=0, xend=0, y=-0.6, yend=0.4, 
-             colour="black", lwd=0.9, geom="segment")
-
-gp <- ggplotGrob(gg_tp_fe)
-facet.columns <- gp$layout$t[grepl("panel", gp$layout$name)]
-x.var         <- sapply(ggplot_build(gg_tp_fe)$layout$panel_scales_x,
-                function(l) length(l$range$range))
-gp$heights[facet.columns] <- gp$heights[facet.columns] * rev(x.var)
-gg_tp_fe <- ggplotify::as.ggplot(gp)
-gg_tp_fe
+             colour="black", lwd=0.9, geom="segment") 
 ```
 
 ```{r tp_re, fig.width=3.25, fig.height=4.5}
@@ -194,13 +187,15 @@ gg_tn_fe <-
     annotate(x=0, xend=0, y=-0.6, yend=0.4, 
              colour="black", lwd=0.9, geom="segment")
 
-gp <- ggplotGrob(gg_tn_fe)
-facet.columns <- gp$layout$t[grepl("panel", gp$layout$name)]
-x.var         <- sapply(ggplot_build(gg_tn_fe)$layout$panel_scales_x,
-                function(l) length(l$range$range))
-gp$heights[facet.columns] <- gp$heights[facet.columns] * rev(x.var)
-gg_tn_fe <- ggplotify::as.ggplot(gp)
-gg_tn_fe
+equalize_panels <- function(x){
+  gp <- ggplotGrob(x)
+  facet.columns <- gp$layout$t[grepl("panel", gp$layout$name)]
+  x.var         <- sapply(ggplot_build(x)$layout$panel_scales_x,
+                  function(l) length(l$range$range))
+  gp$heights[facet.columns] <- gp$heights[facet.columns] * rev(x.var)
+  x <- ggplotify::as.ggplot(gp)
+  x
+}
 ```
 
 ```{r tn_re_hu4, fig.width = 3.77, fig.height = 4.5}
@@ -236,16 +231,28 @@ fit_tn$re <- fit_tn$re %>%
               as.numeric(fit_tn$re_global["50%"]))
 
 gg_tn_re <- ggplot(data = fit_tn$re) +
+  geom_hline(yintercept = as.numeric(fit_tn$re_global["50%"])) +
   geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
                       ymin = `5%`, ymax = `95%`, color = signif)) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  geom_hline(yintercept = as.numeric(fit_tn$re_global["50%"])) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
   ggtitle("TN ~ corn slope") + xlab("Zone ID") + ylab("") +
   theme(legend.position = 0)
 
+```
+
+```{r fe}
+cowplot::plot_grid(
+  equalize_panels(
+    gg_tp_fe + theme(axis.title.x = element_blank())
+  ), 
+  equalize_panels(
+    gg_tn_fe + 
+      theme(axis.text.y = element_blank(), 
+            axis.title.x = element_blank())), 
+  rel_widths = c(1, 1))
 ```
 
 ```{r tn_re_compare, fig.height=3, fig.width=4}
@@ -327,17 +334,17 @@ gg_line
 
 ```
 
-```{r fe}
-cowplot::plot_grid(gg_tp_fe + theme(axis.title.x = element_blank()), 
-                   gg_tn_fe + theme(axis.text.y = element_blank(), 
-                                    axis.title.x = element_blank()), 
-                   rel_widths = c(1, 1))
-```
-
 ```{r re}
 cowplot::plot_grid(gg_tp_re, 
                    gg_tn_re + theme(axis.text.y = element_blank(), 
                                     axis.title.y = element_blank()), 
+                   rel_widths = c(1, 0.9))
+
+cowplot::plot_grid(gg_tp_re, 
+                   gg_tn_re + 
+                     theme(axis.text.y = element_blank(), 
+                           axis.title.y = element_blank()) + 
+                     gghighlight(max(`50%`), n = 1), 
                    rel_widths = c(1, 0.9))
 ```
 
