--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -348,6 +348,40 @@ cowplot::plot_grid(gg_tp_re,
                    rel_widths = c(1, 0.9))
 ```
 
+```{r re-comparison}
+
+# tp, tn
+# ag, row_crop, pasture, corn, soybeans
+re_global <- dplyr::rbind_all(lapply(re_brms, function(x) x$re_global))
+re_global$term <- unlist(lapply(re_brms, 
+                                function(x) get_re_text(as.character(x$formula)[1])))
+re_global$response <- c(rep("tp", 5), rep("tn", 5))
+re_global <- dplyr::filter(re_global, term != "rowvcropvpct")
+
+loo_compare(
+  loo(re_brms[[1]]), 
+  loo(re_brms[[2]]), 
+  loo(re_brms[[3]]), 
+  loo(re_brms[[4]]), 
+  loo(re_brms[[5]]) 
+)
+
+loo_compare(
+  loo(re_brms[[6]]), 
+  loo(re_brms[[7]]), 
+  loo(re_brms[[8]]), 
+  loo(re_brms[[9]]), 
+  loo(re_brms[[10]]) 
+)
+
+group_by(re_global, response) %>%
+  arrange(desc(`50%`))
+
+ggplot(data = re_global) +
+  geom_pointrange()
+
+```
+
 ```{r tn_interaction, eval=FALSE}
 # lapply(re_brms, function(x) x$formula) 
 fit <- re_brms[[6]]
