--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -10,58 +10,32 @@ output:
 knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.height = 6, dev = c("pdf"))
 ```
 
-```{r county_extent, fig.cap = "Number of lake watersheds per county where lakes are limited to those with high agricultural land-use cover (greater than 40 percent) and water quality data in LAGOS from at least 3 sampling events between 2000 and 2010.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/01_county_extent-1.pdf")
-```
-
-```{r maps, fig.cap = "Quantile map of lake nutrients.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/tptn_maps-1.pdf")
-```
+\pagebreak
 
 ```{r maps2, fig.cap = "Quantile map of lake nutrients.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/11_map-1.pdf")
-```
-
-```{r nlcd-versus-cdl, fig.cap = "Comparison between NLCD (2011) derived and CDL (2010) derived total watershed ag and watershed pasture cover. Line is 1:1 not regression.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/04_nlcd-versus-cdl-1.pdf")
-```
-
-```{r nlcd-versus-cdl_map, fig.cap = "Comparison between NLCD (2011) ag and pasture against CDL (2010) specific crops.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/cdl_vs_nlcd-1.pdf")
-```
-
-```{r lulc_vs_iws-lulc, fig.cap = "Stream buffer versus IWS lulc.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/09_stream_buffer-1.pdf")
-```
-
-```{r big_stream_ag, fig.cap = "Stream buffer Ag compared to IWS Ag.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/satellite-1.pdf")
 ```
 
 ```{r exploratory_dotplot, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/dotplot-1.pdf")
 ```
 
-```{r exploratory_heatmap, fig.cap = "Heatmap showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/08_exploratory_dotplot-1.pdf")
+```{r fe-1, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/fe-1.pdf")
 ```
 
-```{r hierarchical_demo, fig.cap = "A) Global (dashed line) and regional (solid lines) fits to the relationship between lake phosphorus and IWS Ag. land use cover from the 2011 NLCD. A hierarchical model would weight these relationships by sample size (darker lines = higher sample size). B) Number of lakes per region.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/02_hierarchical_demo-1.pdf")
+```{r re-comparison-1, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/re-comparison-1.pdf")
 ```
 
-```{r wetland_potential, fig.cap = "A) gSSURGO wetland potential versus National Wetlands Inventory cover. B) Locations of lakes where these number differ by more than 30 percent.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/03_wetland_potential-1.pdf")
+```{r re-1, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/re-1.pdf")
 ```
 
-```{r cafos, fig.cap = "Livestock data from the 2007 USDA Census of Agriculture.", warning=FALSE, echo = FALSE, eval=FALSE}
-knitr::include_graphics("../figures/05_cafos-1.pdf")
+```{r tn_re_hu4-1, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/tn_re_hu4-1.pdf")
 ```
 
-```{r lulc_buffers, fig.cap = "Landuse cover in stream buffers.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/06_lulc_buffer_demo-1.pdf")
-```
-
-```{r cdl_viewport, fig.cap = "CDL landuse cover in example IWS.", warning=FALSE, echo = FALSE}
-knitr::include_graphics("../figures/cdl_viewport-1.pdf")
+```{r tn_re_compare-1, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/tn_re_compare-1.pdf")
 ```
